--- a/src/app/medicamento/medicamento.component.html
+++ b/src/app/medicamento/medicamento.component.html
@@ -75,7 +75,7 @@
     </div>
 </div>
 
-<!-- Dialog cadatro/alteração de Medicamento -->
+<!-- Dialog cadastro/alteração de Medicamento -->
 <p-dialog [visible]="abrirDialogCadastroEdicao" [modal]="true" [resizable]="false" [blockScroll]="true" 
     [draggable]="false" [closable]="false">
 
