Reorganização de classes relacionadas a consulta e retorno, correção de bug na confirmação de consulta e implementação inicial do componente de consulta

--- a/src/app/atendimento-paciente/consulta/consulta.component.css
+++ b/src/app/atendimento-paciente/consulta/consulta.component.css
@@ -1,3 +1,24 @@
+.bg-carregando-dados {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(71, 66, 66, 0.411);
+    z-index: 9999;
+}
+
+.info-carregando-dados {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 800;
+    text-align: center;
+}
+
 .pesquisa {
     margin-right: 8px;
     width: calc(100% - 28px);
