--- a/src/app/atendimento-paciente/consulta/consulta.component.html
+++ b/src/app/atendimento-paciente/consulta/consulta.component.html
@@ -6,7 +6,62 @@
 </div>
 
 <div *ngIf="!carregandoPagina" class="container-fluid">
+    <div class="col-12 col-sm-8 mt-4">
+        <p-fieldset [toggleable]="true">
+            <p-header>
+                Ficha de identificação
+            </p-header>
 
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div><b>Nome: </b>{{ informacoesCadastroConsulta.paciente.nome }}</div>
+
+                    <div>
+                        <span><b>Sexo: </b>{{ informacoesCadastroConsulta.paciente.sexo }}</span>
+                        <span class="px-3"><b>Etnia: </b>{{ informacoesCadastroConsulta.paciente.etnia }}</span>      
+                    </div>
+                    
+                    <div><b>Data de Nascimento: </b>{{ informacoesCadastroConsulta.paciente.dataNascimento }}</div>
+                    <div><b>Telefone: </b>{{ informacoesCadastroConsulta.paciente.telefone }}</div>
+                    <div *ngIf="informacoesCadastroConsulta.paciente.telefoneRecado">
+                        <b>Telefone para Recado: </b>{{ informacoesCadastroConsulta.paciente.telefoneRecado }}
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6">
+                    <div><b>Logradouro: </b>{{ informacoesCadastroConsulta.paciente.endereco.logradouro }}</div>
+                    <div><b>Número: </b>{{ informacoesCadastroConsulta.paciente.endereco.numero }}</div>
+                    <div *ngIf="informacoesCadastroConsulta.paciente.endereco.complemento">
+                        <b>Complemento: </b>{{ informacoesCadastroConsulta.paciente.endereco.complemento }}
+                    </div>
+                    <div><b>Bairro: </b>{{ informacoesCadastroConsulta.paciente.endereco.bairro }}</div>
+                    <div><b>Cidade: </b>{{ informacoesCadastroConsulta.paciente.endereco.cidade }}</div>
+
+                    <div>
+                        <span><b>CEP: </b>{{ informacoesCadastroConsulta.paciente.endereco.cep }}</span>
+                        <span class="pl-3"><b>UF: </b>{{ informacoesCadastroConsulta.paciente.endereco.uf }}</span>
+                    </div>
+                </div>
+
+                <div class="mt-2">
+                    <div><b>Motivo da consulta: </b>{{ informacoesCadastroConsulta.motivoConsulta }}</div>
+                </div>
+            </div>
+        </p-fieldset>
+    </div>
+
+    <div class="mt-3">
+        <p-fieldset [toggleable]="true">
+            <p-header>
+                Registro de dieta habitual
+            </p-header>
+
+            <app-registro-dieta [cadastrarRegistroDieta]="true"
+                [tiposDeRefeicoesParaCadastro]="informacoesCadastroConsulta.tiposDeRefeicoesParaCadastroRegistroDieta"
+                (formularioRegistroDieta)="salvarFormularioRegistroDietaHabitual($event)">
+            </app-registro-dieta>
+        </p-fieldset>
+    </div>
 </div>
 
 
